--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "lodash": "^4.17.21",
     "raviger": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
+    "router": "^1.3.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "tailwindcss": "^3.2.6"
   }
 }
