feat: add payer app enhancements

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL="https://staging-hcx.swasth.app/api/payer"
-REACT_APP_HCX_BASE_URL="https://staging-hcx.swasth.app"
+REACT_APP_API_BASE_URL="https://dev-hcx.swasth.app/api/payer"
+REACT_APP_HCX_BASE_URL="https://dev-hcx.swasth.app"
