--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@monaco-editor/react": "^4.5.0",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "raviger": "^4.1.2",
