--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postbuild": "mkdir build/payor && mv build/assets build/payor/assets"
   },
   "author": {
     "name": "TailAdmin",
