--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REACT_APP_HCX_API_VERSION=v0.8
-REACT_APP_ENV=dev
-REACT_APP_HCX_MOCK_SERVICE_URL=https://dev-hcx.swasth.app/hcx-mock-service/v0.7
-REACT_APP_API_BASE_URL=https://dev-hcx.swasth.app/api/payer
-REACT_APP_HCX_BASE_URL=https://dev-hcx.swasth.app
+REACT_APP_ENV=staging
+REACT_APP_HCX_MOCK_SERVICE_URL=https://staging-hcx.swasth.app/hcx-mock-service/v0.7
+REACT_APP_API_BASE_URL=https://staging-hcx.swasth.app/api/payer
+REACT_APP_HCX_BASE_URL=https://staging-hcx.swasth.app
+REACT_APP_API_BASE_URL=http://localhost:8080/payer
