--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@heroicons/react": "^2.1.1",
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stomp/stompjs": "^7.0.0",
     "@types/qs": "^6.9.7",
     "apexcharts": "^3.37.0",
     "axios": "^1.4.0",
     "flatpickr": "^4.6.13",
+    "global": "^4.4.0",
     "heroicons": "^2.1.1",
     "jsvectormap": "^1.5.1",
     "localforage": "^1.10.0",
@@ -34,6 +36,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "simple-datatables": "^7.2.0",
+    "sockjs-client": "^1.6.1",
     "sort-by": "^0.0.2",
     "swiper": "^9.2.0",
     "use-debounce": "^9.0.4"
@@ -47,6 +50,7 @@
     "@types/lodash": "^4.14.197",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "dotenv": "^16.3.1",
