added reference Apps link dropdown in login page

--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ REACT_APP_ENV=staging
 REACT_APP_HCX_MOCK_SERVICE_URL=http://localhost:8080
 REACT_APP_HCX_BASE_URL=https://staging-hcx.swasth.app
 REACT_APP_API_BASE_URL=http://localhost:8080/payer
+
+// Reference apps 
+bsp = https://dev-hcx.swasth.app/bsp
+opd = "https://dev-hcx.swasth.app/opd"
+absp = https://dev-hcx.swasth.app/absp
+ssp =  https://dev-hcx.swasth.app/ssp/login
+payor = https://dev-hcx.swasth.app/payor
