--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.2",
     "react-toastify": "^9.1.3",
     "simple-datatables": "^7.2.0",
     "sockjs-client": "^1.6.1",
